client/src/routes/profilePage/profilePage.scss
@import "../../responsive.scss";

.profilePage {
  display: flex;
  min-height: 100vh;
  padding-bottom: 100px;

  @include md {
    flex-direction: column;
    overflow: visible;
  }

  .details {
    flex: 3;
    overflow-y: visible;
    padding-bottom: 50px;

    @include md {
      flex: none;
      height: max-content;
    }

    .wrapper {
      padding-right: 50px;
      display: flex;
      flex-direction: column;
      gap: 50px;

      .title {
        display: flex;
        align-items: center;
        justify-content: space-between;

        h1 {
          font-weight: 300;
        }

        button {
          padding: 12px 24px;
          background-color: #fece51;
          cursor: pointer;
          border: none;
          border-radius: 8px;
        }
      }

      .info {
        display: flex;
        flex-direction: column;
        gap: 20px;

        span {
          display: flex;
          align-items: center;
          gap: 20px;
        }

        button {
          width: 100px;
          background-color: teal;
          border: none;
          padding: 10px 20px;
          color: white;
          cursor: pointer;
          border-radius: 5px;
        }

        img {
          width: 40px;
          height: 40px;
          border-radius: 50%;
          object-fit: cover;
        }
      }
    }
  }
  .chatContainer {
    background-color: #2c3e50;
    min-height: 100vh;
    display: flex;
    flex-direction: column;
    border-radius: 15px;
    margin: 10px;
    margin-left: auto;
    margin-right: 0;
    overflow: hidden;
    flex: 2;

    @include md {
      height: max-content;
      flex: none;
      width: 100%;
      margin-left: 10px;
    }

    .wrapper {
      padding: 0px 20px;
      flex: 1;
      display: flex;
      flex-direction: column;
    }
  }
}

// Remove outline from ButtonCta
:global(.group) {
  outline: none !important;
  box-shadow: none !important;

  &:focus {
    outline: none !important;
    box-shadow: none !important;
  }

  &:focus-visible {
    outline: none !important;
    box-shadow: none !important;
  }
}

